@@ -1,8 +1,18 @@
 development head
 
+  IMPROVEMENTS:
+
+    * Adding a file whose parent directory is not versioned will
+      implicitly add the parent, and so on up to the root. This means
+      you should never need to explictly add a directory, they'll just
+      get added when you add a file in the directory.  Contributed by
+      Michael Ellerman.
+
+
   INTERNALS:
 
     * Refactor xml packing/unpacking.
+
 
   BUG FIXES: 
 
